// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pulse should render component with different dimensions 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 16px;
  inline-size: 16px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: IezNe;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c2 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 8px;
  inline-size: 8px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: fXgQcW;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<body>
    <div>
      <div
        class="c0"
      />
      <div
        class="c1"
      />
      <div
        class="c2"
      />
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 16px;
  inline-size: 16px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: IezNe;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c2 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 8px;
  inline-size: 8px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: fXgQcW;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<div>
    <div
      class="c0"
    />
    <div
      class="c1"
    />
    <div
      class="c2"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pulse should render component with different statuses 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Error_Error60Main, #D92020);
}

.c1:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Error_Error60Main, #D92020);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c2 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Success_Success50Main, #1BA049);
}

.c2:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Success_Success50Main, #1BA049);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c3 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Warning_Warning50Main, #FF5C22);
}

.c3:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Warning_Warning50Main, #FF5C22);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: #8A3FFC;
}

.c4:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: #8A3FFC;
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<body>
    <div>
      <div
        class="c0"
      />
      <div
        class="c1"
      />
      <div
        class="c2"
      />
      <div
        class="c3"
      />
      <div
        class="c4"
      />
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c1 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Error_Error60Main, #D92020);
}

.c1:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Error_Error60Main, #D92020);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c2 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Success_Success50Main, #1BA049);
}

.c2:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Success_Success50Main, #1BA049);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c3 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Warning_Warning50Main, #FF5C22);
}

.c3:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Warning_Warning50Main, #FF5C22);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

.c4 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: #8A3FFC;
}

.c4:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: #8A3FFC;
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<div>
    <div
      class="c0"
    />
    <div
      class="c1"
    />
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pulse should render default component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<body>
    <div>
      <div
        class="c0"
      />
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  block-size: 12px;
  inline-size: 12px;
  border-radius: 50%;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0:before {
  position: absolute;
  content: '';
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  box-sizing: border-box;
  animation-name: cIwzhZ;
  animation-duration: 2500ms;
  animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  animation-iteration-count: infinite;
}

<div>
    <div
      class="c0"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
